[3526953] Fixed ct-figure class overwriting align-center, align-left, align-right class.

--- a/web/themes/contrib/civictheme/assets/sass/ckeditor/_ckeditor.scss
+++ b/web/themes/contrib/civictheme/assets/sass/ckeditor/_ckeditor.scss
@@ -1,10 +1,8 @@
 //
-// This file contains styles for the Ck Editor component in the CivicTheme.
+// This file contains styles for the CKEditor component in CivicTheme.
 //
 
 .ct-figure {
-  $root: &;
-
   &.align-left,
   &.align-center,
   &.align-right {
